chore: fix up breakage and configure PR checks (#6)
* fix: use Arrays.of() while still target Java 8
* ci: build for eclipse-latest and update to Tycho 2.7.0
* ci: add PR checks and build to java 17
* ci: build against latest releases of lsp4e and tm4e