@@ -12,6 +12,7 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.Reader;
 import java.net.URI;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.eclipse.core.runtime.Platform;
@@ -127,7 +128,7 @@ public class GoServer implements StreamConnectionProvider {
 		LanguageServerPlugin.logInfo("GORE: Found gopls at " + gopls);
 		goplsDir = gopls.substring(0, gopls.lastIndexOf(File.separator));
 
-		List<String> commands = List.of(gopls, "serve"); // "-rpc.trace"
+		List<String> commands = Arrays.asList(gopls, "serve"); // "-rpc.trace"
 		File workingDir = new File(".");
 		if (os.equals(Platform.OS_WIN32)) {
 			commands.add("--listen=127.0.0.1:" + CONNECTION_PORT);
